--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "next": "15.3.4",
+    "next-intl": "^4.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -29,6 +30,7 @@
     "jest": "^30.0.3",
     "jest-environment-jsdom": "^30.0.2",
     "prettier": "3.6.2",
+    "sass": "^1.89.2",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   }
