--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -3,7 +3,7 @@ services:
     container_name: ventimax
     build:
       context: .
-      dockerfile: prod.Dockerfile
+      dockerfile: Dockerfile
     restart: always
     ports:
         - 3000:3000
