--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,7 +5,7 @@ steps:
       [
         "build",
         "-t",
-        "europe-west1-docker.pkg.dev/${PROJECT_ID}/cloud-run-source-deploy/ventimax.ru/ventimax-ru@sha256:1568f9ade95e8c0dcabd9873054c65c53479dea42f518d68c7f0c49ad4f547fe",
+        "europe-west1-docker.pkg.dev/${PROJECT_ID}/cloud-run-source-deploy/ventimax.ru/ventimax-ru",
         ".",
       ]
     env:
@@ -18,7 +18,7 @@ steps:
     args:
       [
         "push",
-        "europe-west1-docker.pkg.dev/${PROJECT_ID}/cloud-run-source-deploy/ventimax.ru/ventimax-ru@sha256:1568f9ade95e8c0dcabd9873054c65c53479dea42f518d68c7f0c49ad4f547fe",
+        "europe-west1-docker.pkg.dev/${PROJECT_ID}/cloud-run-source-deploy/ventimax.ru/ventimax-ru",
       ]
 options:
   logging: "CLOUD_LOGGING_ONLY"
