--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,13 +6,9 @@ steps:
         "build",
         "-t",
         "europe-west1-docker.pkg.dev/${PROJECT_ID}/cloud-run-source-deploy/ventimax.ru/ventimax-ru",
+        "--build-arg=ROCKET_CHAT_URL=${_ROCKET_CHAT_URL},SERVICE_ID=${_SERVICE_ID},TEMPLATE_ID=${_TEMPLATE_ID},PUBLIC_KEY=${_PUBLIC_KEY}",
         ".",
       ]
-    env:
-      - "NEXT_PUBLIC_ROCKET_CHAT_URL=${_ROCKET_CHAT_URL}"
-      - "NEXT_PUBLIC_SERVICE_ID=${_SERVICE_ID}"
-      - "NEXT_PUBLIC_TEMPLATE_ID=${_TEMPLATE_ID}"
-      - "NEXT_PUBLIC_PUBLIC_KEY=${_PUBLIC_KEY}"
   # Docker Push
   - name: "gcr.io/cloud-builders/docker"
     args:
