--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
         "build",
         "--no-cache",
         "-t",
-        "europe-west1-docker.pkg.dev/${PROJECT_ID}/cloud-run-source-deploy/ventimax.ru/ventimax-ru",
+        "europe-west1-docker.pkg.dev/${PROJECT_ID}/cloud-run-source-deploy/ventimax.ru/ventimax-ru:${COMMIT_SHA}",
         "--build-arg",
         "ROCKET_CHAT_URL=${_ROCKET_CHAT_URL}",
         "--build-arg",
@@ -22,7 +22,7 @@ steps:
     args:
       [
         "push",
-        "europe-west1-docker.pkg.dev/${PROJECT_ID}/cloud-run-source-deploy/ventimax.ru/ventimax-ru",
+        "europe-west1-docker.pkg.dev/${PROJECT_ID}/cloud-run-source-deploy/ventimax.ru/ventimax-ru:${COMMIT_SHA}",
       ]
 options:
   logging: "CLOUD_LOGGING_ONLY"
