--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next-intl": "^4.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "schema-dts": "^1.1.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
